--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 			<div class="row">
 				<div class="col-lg-4 col-md-4 col-sm-12 col-10 d-block m-auto">
 					<div class="card-img">
-						<img src="images/2.jpg" class="card-img img-fluid" >
+						<img src="images/2.JPG" class="card-img img-fluid" >
 						<div class="card-body">
 							<h2 class="card-title">Threads</h2>
 							<p class="card-text">Illistrations</p>
@@ -117,7 +117,7 @@
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-12 col-10 d-block m-auto">
 					<div class="card">
-						<img src="images/3.jpg" class="card-img img-fluid">
+						<img src="images/3.JPG" class="card-img img-fluid">
 						<div class="card-body">
 							<h2 class="card-title">Explore</h2>
 							<p class="card-text">Graphic Design</p>
@@ -126,7 +126,7 @@
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-12 col-10 d-block m-auto">
 					<div class="card">
-						<img src="images/finish.jpg" class="card-img img-fluid" >
+						<img src="images/finish.JPG" class="card-img img-fluid" >
 						<div class="card-body">
 							<h2 class="card-title">Finish</h2>
 							<p class="card-text">Identity</p>
@@ -138,7 +138,7 @@
 			<div class="row">
 				<div class="col-lg-4 col-md-4 col-sm-12 col-10 d-block m-auto">
 					<div class="card">
-						<img src="images/4.jpg" class="card-img img-fluid" >
+						<img src="images/4.JPG" class="card-img img-fluid" >
 						<div class="card-body">
 							<h2 class="card-title">Lines</h2>
 							<p class="card-text">Branding</p>
@@ -147,7 +147,7 @@
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-12 col-10 d-block m-auto">
 					<div class="card">
-						<img src="images/5.jpg" class="card-img img-fluid">
+						<img src="images/5.JPG" class="card-img img-fluid">
 						<div class="card-body">
 							<h2 class="card-title">SouthWest</h2>
 							<p class="card-text">Website Design</p>
@@ -156,7 +156,7 @@
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-12 col-10 d-block m-auto">
 					<div class="card">
-						<img src="images/finish.jpg" class="card-img img-fluid" >
+						<img src="images/finish.JPG" class="card-img img-fluid" >
 						<div class="card-body">
 							<h2 class="card-title">Window</h2>
 							<p class="card-text">Photography</p>
@@ -174,7 +174,7 @@
 			<div class="row teamsetting">
 				<div class="col-lg-4 col-md-4 col-sm-12 col-10 d-block m-auto">
 					<figure class="figure">
-						<img src="images/4.jpg" class="figure-img rounded-circle" height="300px" width="250px">
+						<img src="images/4.JPG" class="figure-img rounded-circle" height="300px" width="250px">
 						<h4>AAA</h4>
 						<p class="figure-caption">Lead Designer</p>
 					</figure>
